# polymarket-trader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.ps1  dev.sh  fix_bots.py
backend/: .gitignore  Cargo.toml  seed.sql
backend/.claude/plans/: wondrous-jumping-gadget.md
backend/docs/: PROFITABLE_STRATEGY.md
backend/src/: lib.rs  main.rs  tracing.rs
backend/src/api/: auth.rs  binance.rs  bots.rs  funding.rs  live_readiness.rs  market.rs  mod.rs  monitoring.rs  orders.rs  positions.rs  settings.rs  sse.rs  strategy_tests.rs  user.rs
backend/src/crypto/: mod.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs
backend/src/services/: credential_service.rs  mod.rs
backend/src/strategies/: base.rs  binance_velocity.rs  contrarian.rs  edge_hunter.rs  fair_value.rs  mean_reversion.rs  mod.rs  momentum.rs  oracle_lag.rs  patient_waiter.rs  signal_momentum_v2.rs  sniper.rs  strict_momentum.rs  trend.rs  volatility.rs  window_delta.rs
backend/src/trading/: bot_loss_tracker.rs  client.rs  competition.rs  market_data.rs  mod.rs  orchestrator.rs  polymarket.rs  position.rs  risk_manager.rs  settlement.rs  strategy.rs  strategy_coordinator.rs  websocket.rs
backend/src/trading/binance/: client.rs  kline.rs  mod.rs  ticker.rs
backend/src/trading/bot_executor/: executor.rs  mod.rs  strategies.rs
backend/src/trading/execution/: live.rs  mod.rs  paper.rs
docs/: 04-27.md  04-30.md  05-12.md  2026-05-18-bots-plan.md  2026-05-18-dashboard-plan.md  IMPORT_PLAN.md  POLYMARKET_API_V2.md  PROJECT_STATUS.md  review_es_terv.md  ui.md
(+104 files in other folders)
