[package]
name = "polymarket-v2-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Encryption (for private keys)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
pbkdf2 = "0.12"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# Config
dotenv = "0.15"

# Ethereum/Polymarket
ethers = { version = "2.0", default-features = false }
hex = "0.4"


[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "polymarket-v2"
path = "src/main.rs"
